# data-science-starter

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: basic-runner.yml  on-push.yml
notebooks/: .gitignore  test_ground.ipynb
src/your_package_here/: example.py  import_test.py
testing/: my_test.py
tests/: my_test.py
your_package_here/: import_test.py
