[project]
name = "your_package_here"
version = "0.1.0"
description = ""
authors = []

requires-python = ">=3.8"
dependencies = [
    "pandas == 1.5.3",
]

[project.optional-dependencies]
dev = [
    "jupyter == 1.0.0"
]
test = [
    "pytest == 7.2.0",
    "pytest-cov == 4.0.0",
    "black ==22.10.0",
    "mypy == 0.982"
]

[tool.black]
line-length = 120

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
