[project]
name = "your_package_here"
version = "0.1.0"
description = ""
authors = []

requires-python = ">=3.11"
dependencies = [
    "pandas == 2.2.0",
]

[dependency-groups]
dev = [
    "jupyter == 1.0.0"
]
test = [
    "pytest == 8.0.0",
    "pytest-cov == 4.0.0",
    "black ==24.1.1",
    "mypy == 1.8.0"
]

[tool.black]
line-length = 120

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
